# BlackRoad-Operating-System

./: .gitignore  API_INTEGRATIONS.md  ASSESSMENT.md  AUTO_MERGE_POLICY.md  BEAST_MODE_SUMMARY.md  BLACKROAD_OS_BIG_KAHUNA_VISION.md  BLACKROAD_OS_COMPLETE_STRATEGIC_ARCHIVE.md  BLACKROAD_OS_REPO_MAP.md  CECE_FRAMEWORK.md  CECE_README.md  CI_CD.md  CLAUDE.md  CLOUDFLARE_DNS_BLUEPRINT.md  CNAME  CODEBASE_STATUS.md  CORE_ROUTERS.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NOTES.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SMOKE_TEST_GUIDE.md  ENTITIES.md  ENV_VARS.md  GITHUB_AUTOMATION_RULES.md  GITHUB_SETUP_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  INTEGRATION_GUIDE.md  MASTER_ORCHESTRATION_PLAN.md  MERGE_QUEUE_PLAN.md  NEXT_ACTIONS_ALEXA.md  OPERATOR_PR_EVENT_HANDLERS.md  OPERATOR_STATUS_CHECK.md  ORG_STRUCTURE.md  PHASE2_5_SUMMARY_FOR_ALEXA.md  PHASE2_SUMMARY_FOR_ALEXA.md  PRISM_CONSOLE_ANALYSIS.md  PRODUCTION_STACK_AUDIT_2025-11-18.md  PROMPT_SYSTEM.md  (+21 more)
.githooks/: README.md  pre-commit  setup.sh
.github/: CODEOWNERS  GITHUB_ENTERPRISE_SETUP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  merge_queue.yml  pull_request_template.md
.templates/: README.md
agents/: README.md  __init__.py
backend/: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  docker-compose.yml  requirements.txt  run.py
blackroad-os/: ARCHITECTURE.md  EXTENDING.md  README.md  index.html  lucidia-shell.html
blackroad-os-agents/: package-lock.json  package.json
blackroad-os-api/: package-lock.json  package.json  tsconfig.json
blackroad-os-core/: package-lock.json  package.json
blackroad-os-operator/: package-lock.json  package.json
blackroad-universe/: README.md
br95/: package.json
codex-docs/: DEPLOY_DOCS.md  README.md  mkdocs.yml
cognitive/: README.md  USAGE.md  __init__.py  agent_coordination.py  context_engine.py  intent_graph.py  living_docs.py  quickstart.py  requirements.txt  semantic_fs.py  smart_documents.py
core_os/: README.md  __init__.py  models.py  state.py
deploy/: services.json
docs/: ACCESSIBILITY_NOTES.md  BRAND_ARCHITECTURE.md  BRAND_PRODUCT_MAP.md  CECE_ULTRAPROMPT.md  CLOUDFLARE_MIGRATION_GUIDE.md  DEPLOYMENT.md  DESIGN_V0_2.md  LEITL_PROTOCOL.md  LEITL_USAGE_GUIDE.md  MERGE_QUEUE_AUTOMATION.md  OPERATOR_SETUP_GUIDE.md  OS_SPEC.md  OS_V0_2_PAIN_MAPPING.md  PRISM_COUNCIL_PROMPTS.md  PRISM_ORCHESTRATOR_PROMPT.md  PRODUCTS.md  PR_ACTION_INTELLIGENCE.md  QLM.md  RAILWAY_BR95.md  RAILWAY_DEPLOYMENT.md  REPO_UNIFICATION.md  SERVICE_STATUS.md  WHITEPAPER.md  about-blackroad-os.md  blackroad-vs-blackrock.md  domains-overview.md  github-metadata-updates.md  migration.md
examples/: cece_integration_examples.py
implementation-plans/: IMPLEMENTATION_blackroad-api.md  IMPLEMENTATION_blackroad-io.md  IMPLEMENTATION_blackroad-operator.md  (+4 more)
sdk/python/: CHANGELOG.md  INSTALL.md  README.md  SDK_SUMMARY.md  STRUCTURE.txt  pyproject.toml  requirements.txt  setup.py  verify_install.py
sdk/python/blackroad/: __init__.py  agents.py  auth.py  blockchain.py  client.py  exceptions.py
sdk/python/blackroad/models/: __init__.py  agent.py  blockchain.py  user.py
sdk/python/blackroad/utils/: __init__.py  http.py
sdk/python/examples/: README.md  agents_example.py  blockchain_example.py  quickstart.py
sdk/python/tests/: __init__.py  test_agents.py  test_client.py
(+847 files in other folders)
